test/trivial/bradc/defaultinit1a.good
defaultinit1a.chpl:1: In function 'main':
defaultinit1a.chpl:3: error: statement references variable 'a' before it is defined
defaultinit1a.chpl:4: error: statement references variable 'b' before it is defined
defaultinit1a.chpl:5: error: statement references variable 'c' before it is defined
defaultinit1a.chpl:6: error: statement references variable 'd' before it is defined
defaultinit1a.chpl:7: error: statement references variable 'e' before it is defined
