test/trivial/bradc/defaultinit1a.chpl
function main() {

writeln("a is: ", a);
writeln("b is: ", b);
writeln("c is: ", c);
writeln("d is: ", d);
writeln("e is: ", e);
writeln();

var a: boolean = true;
var b: integer = 1;
var c: float = 1.2;
var d: complex = 1.2 + 3.4i;
var e: string = "nonempty";

writeln("a is: ", a);
writeln("b is: ", b);
writeln("c is: ", c);
writeln("d is: ", d);
writeln("e is: ", e);
}
